    is NOT just a simple viewport (e.g., when one of
    the components of the "vpStack" is a "vpStack").

3.  Added support for "vpPaths" within a "vpStack",
    "vpList", or "vpTree" (i.e., mixing of viewports
    and "vpPaths").

4.  New functions grid.reorder() and reorderGrob() to  
    modify the order in which the children of a gTree 
    are drawn.


Changes from grid_2.14.0 to grid_2.15.0:
--------------------------------------

1.  Added calcStringMetric() function.

2.  Added "strascent" and "strdescent" units, plus 
    stringAscent() and stringDescent() convenience functions.

3.  Added "grobascent" and "grobdescent" units, plus 
    grobAscent() and grobDescent() convenience functions.

    The "ascent" of a grob is equivalent to its height by default,
    but ascentDetails() methods can be written 
    (e.g., text grobs are different).

    The "descent" of a grob is zero by default,
    but descentDetails() methods can be written 
    (e.g., text grobs are different).

4.  Fix for xsplinePoints() so that it copes with xspline grob
    with non-NULL 'id' AND so that it takes the 'vp' and 'gp'
    settings into account.

5.  Added grid.bezier() function to draw Bezier curve
    (using an X-spline approximation).

    Also added bezierPoints() function.

6.  Added grid.DLapply() function.


Changes from grid_2.12.0 to grid_2.13.0:
--------------------------------------

1.  Added grid.function() for drawing lines to represent functions.

2.  Fixed bug in calculation of x, y, width, and height of segments
    grobs.

3.  Fixed bug in grid.grab(wrap=TRUE) when the scene includes 
    downViewport()s.

4.  Added showGrob() function.


Changes from grid_2.11.0 to grid_2.12.0:
--------------------------------------

1.  Neither width nor height need to be specified in 
    grid.raster().  The image aspect ratio will be used
    to calculate an appropriate image size for the 
    current viewport.
