@@ -19,6 +19,9 @@ Changes from grid_2.15.0 to grid_2.16.0:
     modify the order in which the children of a gTree 
     are drawn.
 
+5.  Bug fix for grid.ls() to report children of a gTree
+    in the correct order.
+
 
 Changes from grid_2.14.0 to grid_2.15.0:
 --------------------------------------
